Assets/Scripts/Forge/Grammar.txt
Program ::= (Effect | Card)*

Effect ::= "effect" "{" EffectBody "}"

EffectBody ::= "Name:" STRING ","
               ["Params:" "{" [ParamDeclaration ("," ParamDeclaration)*] "}" ","]
               "Action:" Action 
                
ParamDeclaration ::= IDENTIFIER ":" ("Number" | "String" | "Bool")

Action ::= "(" IDENTIFIER "," IDENTIFIER ")" "=>" StatementBlock

StatementBlock ::= "{" (Statement ";")+ "}"

Statement ::= ForLoop | WhileLoop | AssignStatement | FunctionCall

ForLoop ::= "for" IDENTIFIER "in" (IDENTIFIER |PropertyAccess) StatementBlock

WhileLoop ::= "while" "(" Expression ")" StatementBlock

BinaryAssignStatement ::= (IDENTIFIER | PropertyAccess) ("=" | "+=" | "-=") (Expression | FunctionCall)

UnaryAssignStatement ::= ["--" | "!" | "++"] (IDENTIFIER | PropertyAccess)

FunctionCall ::= PropertyAccess "(" [Expression | Predicate] ")"

Card ::= "card" "{" CardBody "}"

CardBody ::= "Type:" STRING ","
             "Name:" STRING ","
             "Faction:" STRING ","
             ["Power:" NUMBER ","]
             ["Range:" "[" STRING ("," STRING)* "]" ","]
             "OnActivation:" "[" EffectActivation+ "]" ","

EffectActivation ::= "{" EffectInvocation "}"

EffectInvocation ::= "Effect:" (STRING | "{" "Name:" STRING "," [(ParamAssignment)*] "}" ",") 
                     [Selector ","]
                     [PostAction]

ParamAssignment ::= IDENTIFIER ":" Expression ","

Selector ::= "Selector:" "{" 
             ["Source:" STRING ","]
             ["Single:" BOOLEAN ","]
             "Predicate:" Predicate
             "}"

Predicate ::= "(" IDENTIFIER ")" "=>" BooleanExpression

PostAction ::= "PostAction:" 
               "{" 
               "Type:" STRING ","
               ["Params:" "{" [(ParamAssignment)*] "}" ","]
               [Selector ","]
               [PostAction]
               "}"

Expression ::= BooleanExpression | ComparisonExpression | ArithmeticExpression | Term | Factor 

BooleanExpression ::= ComparisonExpression (("&&" | "||") ComparisonExpression)*

ComparisonExpression ::= ArithmeticExpression  (("<" | ">" | "==" | ">=" | "<=") ArithmeticExpression)*

ArithmeticExpression ::= (Term | UnaryAssignStatement) (("+" | "-") Term)*

Term ::= Factor (("*" | "/" | "^" | @ | @@) Factor)*

Factor ::= NUMBER | STRING | BOOLEAN | IDENTIFIER |  PropertyAccess | UnaryAssignStatement | "(" Expression ")"

PropertyAccess ::= IDENTIFIER ("." IDENTIFIER)+  
STRING ::= '"' [^"]* '"'
NUMBER ::= [0-9]+ ("." [0-9]+)?
BOOLEAN ::= "true" | "false"
IDENTIFIER ::= [a-zA-Z_][a-zA-Z0-9_]*
